--- a/Entrega 4/Chilexplox/src/chilexplox/view/Descarga.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Descarga.fxml
@@ -23,7 +23,7 @@
       </TableView>
       <Button layoutX="258.0" layoutY="33.0" mnemonicParsing="false" onAction="#handleVolverMenu" text="Volver al menu" />
       <ChoiceBox fx:id="patente_descarga" layoutX="307.0" layoutY="200.0" prefHeight="31.0" prefWidth="187.0" />
-      <Label layoutX="39.0" layoutY="205.0" text="Pantente camion:">
+      <Label layoutX="39.0" layoutY="205.0" text="Patente camion:">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
