--- a/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ArrivoySalida.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -8,30 +9,16 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ArrivoySalidaController">
    <children>
-      <Button layoutX="416.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleVolverMenu" text="Volver al Menu" />
-      <Button layoutX="446.0" layoutY="130.0" mnemonicParsing="false" onAction="#handleAvisarArribo" text="Arribo" />
-      <Button layoutX="446.0" layoutY="409.0" mnemonicParsing="false" onAction="#handleAvisarSalida" text="Salida" />
-      <Label layoutX="49.0" layoutY="32.0" text="Sucursal:">
+      <Button layoutX="1079.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
+      <Button layoutX="211.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarArribo" prefHeight="65.0" prefWidth="129.0" text="Arribo" />
+      <Button layoutX="832.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarSalida" prefHeight="65.0" prefWidth="115.0" text="Salida" />
+      <Label layoutX="880.0" layoutY="29.0" text="Sucursal:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="sucursal" layoutX="116.0" layoutY="31.0" text="sucursal" />
-      <Label layoutX="49.0" layoutY="101.0" text="Arrivo de camion">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <Label layoutX="48.0" layoutY="380.0" text="Salida de camion">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <Label layoutX="47.0" layoutY="135.0" text="Patente camion:" />
-      <Label layoutX="47.0" layoutY="409.0" text="Patente camion:" />
-      <ChoiceBox fx:id="patenteArribo" layoutX="205.0" layoutY="130.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="patenteSalida" layoutX="205.0" layoutY="409.0" prefWidth="150.0" />
-      <TableView fx:id="tabla_enTransito" layoutX="627.0" layoutY="67.0" prefHeight="195.0" prefWidth="506.0">
+      <Label fx:id="sucursal" layoutX="947.0" layoutY="28.0" text="sucursal" />
+      <TableView fx:id="tabla_enTransito" layoutX="27.0" layoutY="168.0" prefHeight="341.0" prefWidth="506.0">
         <columns>
           <TableColumn fx:id="patenteColumn" prefWidth="96.0" text="Patente" />
           <TableColumn fx:id="origenColumn" prefWidth="125.0" text="Origen" />
@@ -39,17 +26,7 @@
             <TableColumn fx:id="estadoColumn" prefWidth="150.0" text="Estado" />
         </columns>
       </TableView>
-      <Label layoutX="627.0" layoutY="32.0" text="Camiones en tránsito">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <Label layoutX="627.0" layoutY="300.0" text="Camiones disponibles o cargando">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tabla_disponible" layoutX="627.0" layoutY="342.0" prefHeight="195.0" prefWidth="506.0">
+      <TableView fx:id="tabla_disponible" layoutX="627.0" layoutY="168.0" prefHeight="341.0" prefWidth="506.0">
          <columns>
             <TableColumn fx:id="patente2Column" prefWidth="99.0" text="Patente" />
             <TableColumn fx:id="origen2Column" prefWidth="125.0" text="Origen" />
@@ -57,5 +34,21 @@
             <TableColumn fx:id="estado2Column" prefWidth="146.0" text="Estado" />
          </columns>
       </TableView>
+      <ImageView fitHeight="100.0" fitWidth="500.0" layoutX="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../archivos/chilexplox.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="206.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones en transito">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
+      <Separator layoutX="11.0" layoutY="98.0" prefHeight="0.0" prefWidth="1147.0" />
+      <Text layoutX="791.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones disponibles o cargando">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
