--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ArrivoySalida.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ArrivoySalida.fxml
@@ -9,15 +9,9 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ArrivoySalidaController">
    <children>
-      <Button layoutX="1079.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
-      <Button layoutX="211.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarArribo" prefHeight="65.0" prefWidth="129.0" text="Arribo" />
-      <Button layoutX="832.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarSalida" prefHeight="65.0" prefWidth="115.0" text="Salida" />
-      <Label layoutX="880.0" layoutY="29.0" text="Sucursal:">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <Label fx:id="sucursal" layoutX="947.0" layoutY="28.0" text="sucursal" />
+      <Button layoutX="1037.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
+      <Button layoutX="211.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarArribo" prefHeight="65.0" prefWidth="129.0" text="Avisar Arribo" />
+      <Button layoutX="832.0" layoutY="521.0" mnemonicParsing="false" onAction="#handleAvisarSalida" prefHeight="65.0" prefWidth="115.0" text="Avisar Salida" />
       <TableView fx:id="tabla_enTransito" layoutX="27.0" layoutY="168.0" prefHeight="341.0" prefWidth="506.0">
         <columns>
           <TableColumn fx:id="patenteColumn" prefWidth="96.0" text="Patente" />
@@ -39,13 +33,13 @@
             <Image url="@../../../archivos/chilexplox.png" />
          </image>
       </ImageView>
-      <Text layoutX="206.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones en transito">
+      <Text layoutX="27.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones en transito" textAlignment="CENTER" wrappingWidth="506.0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Text>
       <Separator layoutX="11.0" layoutY="98.0" prefHeight="0.0" prefWidth="1147.0" />
-      <Text layoutX="791.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones disponibles o cargando">
+      <Text layoutX="627.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camiones cargados" textAlignment="CENTER" wrappingWidth="506.0">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
