--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Carga.fxml
@@ -22,7 +22,7 @@
       <Label fx:id="sucursal" layoutX="103.0" layoutY="26.0" text="sucursal" />
       <TextField fx:id="id_pedido" layoutX="173.0" layoutY="98.0" />
       <Button layoutX="410.0" layoutY="95.0" mnemonicParsing="false" onAction="#handleCargarPedido" prefHeight="37.0" prefWidth="92.0" text="Cargar" />
-      <Label layoutX="29.0" layoutY="195.0" text="Patente camion:">
+      <Label layoutX="23.0" layoutY="196.0" text="Patente camion:">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Label>
@@ -41,11 +41,17 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="volumen" layoutX="297.0" layoutY="254.0" text="volumen" />
-      <Label layoutX="30.0" layoutY="254.0" text="Volumen disponible del camión:">
+      <Label fx:id="volumen" layoutX="297.0" layoutY="315.0" text="volumen" />
+      <Label layoutX="30.0" layoutY="316.0" text="Volumen disponible del camión:">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
+      <Label layoutX="23.0" layoutY="252.0" prefHeight="21.0" prefWidth="131.0" text="Sucursal destino:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="sucursal_destino" layoutX="297.0" layoutY="247.0" prefHeight="31.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
