--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Descarga.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Descarga.fxml
@@ -18,7 +18,7 @@
          </columns>
       </TableView>
       <ChoiceBox fx:id="patente_descarga" layoutX="277.0" layoutY="152.0" prefHeight="31.0" prefWidth="187.0" />
-      <Button layoutX="115.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleCargarDatosCamion" prefHeight="72.0" prefWidth="119.0" text="Cargar Pedidos" />
+      <Button layoutX="115.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleCargarDatosCamion" prefHeight="72.0" prefWidth="119.0" text="Cargar Pedidos" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
       <Label fx:id="sucursal" layoutX="902.0" layoutY="51.0" text="sucursal" />
       <Label layoutX="828.0" layoutY="51.0" text="Sucursal:">
          <font>
@@ -31,7 +31,7 @@
             <Image url="@../../../archivos/chilexplox.png" />
          </image>
       </ImageView>
-      <Button layoutX="1057.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
+      <Button layoutX="1057.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" textAlignment="CENTER" wrapText="true" />
       <Text layoutX="643.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Listado de pedidos restantes en camion" textAlignment="CENTER" wrappingWidth="510.0">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -42,7 +42,7 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Button layoutX="845.0" layoutY="540.0" mnemonicParsing="false" onAction="#handleDescargarPedido" prefHeight="46.0" prefWidth="130.0" text="Descargar Pedido" />
+      <Button layoutX="816.0" layoutY="539.0" mnemonicParsing="false" onAction="#handleDescargarPedido" prefHeight="47.0" prefWidth="172.0" text="Descargar Pedido" textAlignment="CENTER" />
       <Button alignment="CENTER" layoutX="303.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleDescargarCamionCompleto" prefHeight="72.0" prefWidth="150.0" text="Descargar Camion Completo" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
