--- a/Entrega 4/Chilexplox/src/chilexplox/view/Carga.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Carga.fxml
@@ -15,7 +15,7 @@
          </font>
       </Label>
       <Label fx:id="sucursal" layoutX="894.0" layoutY="29.0" text="sucursal" />
-      <Button layoutX="491.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleCargaOptima" prefHeight="50.0" prefWidth="96.0" text="Cargar Optimo" />
+      <Button layoutX="491.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleCargaOptima" prefHeight="56.0" prefWidth="96.0" text="Cargar Optimo" textAlignment="CENTER" wrapText="true" />
       <ChoiceBox fx:id="patente_carga" layoutX="259.0" layoutY="124.0" prefHeight="31.0" prefWidth="187.0" />
       <TableView fx:id="tablaPedidosCargados" layoutX="653.0" layoutY="180.0" prefHeight="348.0" prefWidth="510.0">
         <columns>
@@ -26,7 +26,7 @@
         </columns>
       </TableView>
       <ChoiceBox fx:id="sucursal_destino" layoutX="259.0" layoutY="224.0" prefHeight="31.0" prefWidth="187.0" />
-      <Button layoutX="1067.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" />
+      <Button layoutX="1067.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleVolverMenu" prefHeight="56.0" prefWidth="96.0" text="Volver al Menu" textAlignment="CENTER" wrapText="true" />
       <ImageView fitHeight="100.0" fitWidth="500.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../archivos/chilexplox.png" />
@@ -61,13 +61,13 @@
          </columnResizePolicy>
       </TableView>
       <Button layoutX="259.0" layoutY="541.0" mnemonicParsing="false" onAction="#handleCargaPedidoIndividual" prefHeight="40.0" prefWidth="126.0" text="Cargar pedido" />
-      <Button layoutX="1029.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="50.0" prefWidth="134.0" text="Guardar Cambios" />
+      <Button layoutX="1029.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="56.0" prefWidth="134.0" text="Guardar Cambios" textAlignment="CENTER" wrapText="true" />
       <Text layoutX="44.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Si lo prefiere, puede cargar de manera manual" />
-      <Button layoutX="491.0" layoutY="211.0" mnemonicParsing="false" onAction="#handleVerPedidos" prefHeight="50.0" prefWidth="96.0" text="Ver Pedidos" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="491.0" layoutY="211.0" mnemonicParsing="false" onAction="#handleVerPedidos" prefHeight="56.0" prefWidth="96.0" text="Ver Pedidos" textAlignment="CENTER" wrapText="true" />
       <Text layoutX="653.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Camion a sucursal:" />
       <Text layoutX="952.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\% Carga:" />
       <Label fx:id="carga" layoutX="1013.0" layoutY="148.0" />
       <Label fx:id="sucursalDestino" layoutX="763.0" layoutY="148.0" />
-      <Button layoutX="831.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleRemoverPedido" prefHeight="31.0" prefWidth="126.0" text="Remover Pedido" />
+      <Button layoutX="831.0" layoutY="536.0" mnemonicParsing="false" onAction="#handleRemoverPedido" prefHeight="56.0" prefWidth="126.0" text="Remover Pedido" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
